# SouWen

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.en.md  README.md  cli.py  docker-compose.yml  entrypoint.sh  hatch_build.py  pyproject.toml  requirements-full.txt  requirements-server.txt  requirements.txt  souwen.example.yaml
.github/: AGENTS.md  dependabot.yml  labeler.yml
.github/prompts/: ai-agent.md  ai-repo-audit.md  ai-review.md
.github/workflows/: ai-agent.yml  ai-fix.yml  ai-repo-audit.yml  ai-review.yml  auto-format.yml  build-nuitka.yml  build-pyinstaller.yml  ci.yml  deploy-hf-space.yml  external-smoke-gate.yml  hf-space-local-gate.yml  labeler.yml  panel-sync.yml  pr-size.yml  publish.yml  registry-consistency.yml  release-candidate.yml  v2-ci.yml
cloud/: AGENTS.md  deploy.sh
cloud/hfs/: Dockerfile  README.md  entrypoint.sh
cloud/modelscope/: .dockerignore  Dockerfile  README.md  entrypoint.sh
contracts/: README.md
contracts/conformance/: README.md
contracts/errors/: README.md
contracts/fixtures/: README.md
contracts/openapi/: README.md
contracts/provider/: README.md
contracts/schemas/: README.md
contracts/security/: README.md
docs/: AGENTS.md  README.md  adding-a-source.md  anti-scraping.md  api-reference.md  appearance.md  architecture.md  concepts.md  configuration.md  contributing.md  data-sources.md  deployment.md  getting-started.md  hf-space-cd.md  plugin-integration-spec.md  plugin-management.md  plugin-manifest.schema.json  python-api.md  source-catalog.md  testing-migration.md  testing.md  v2-development.md  warp-solutions.md  zero-key-benchmark.md
docs/internal/: development-branching.md  llm-search-foundation-spec.md  rc-readiness-gates.md  spec-01-external-api-canonical-dto.md  spec-05-provider-spi-manifest-conformance.md  spec-06-common-runtime-lld.md  spec-08-directory-dependency.md  testing-playbook.md  zero-key-benchmark.md
examples/: AGENTS.md  metaso_example.py  search_papers.py  search_patents.py  search_web.py  wayback_cdx_example.py
examples/minimal-plugin/: AGENTS.md  README.md  pyproject.toml  souwen-plugin.json
examples/minimal-plugin/souwen_example_plugin/: __init__.py  client.py  handler.py
examples/minimal-plugin/tests/: test_contract.py
local/: BATCH_J_REPORT.md
panel/: AGENTS.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
panel/docs/: appearance.md
panel/src/: App.tsx  main.tsx  vite-env.d.ts
scripts/: AGENTS.md  _functional_common.py  article_extract_functional_check.py  crawl4ai_functional_check.py  datacite_functional_check.py  doab_functional_check.py  eric_functional_check.py  figshare_functional_check.py  hf_space_smoke.py  internet_archive_functional_check.py  library_of_congress_functional_check.py  librivox_functional_check.py  local_catalog_functional_check.py  oapen_functional_check.py  open_library_functional_check.py  openalex_functional_check.py  opencitations_functional_check.py  osti_functional_check.py  plugin_functional_check.py  scrapling_functional_check.py  taiwan_new_books_functional_check.py  uniapi_search_functional_check.py  warp-checksums.txt  warp-init.sh  wikisource_functional_check.py  zero_key_functional_check.py
scripts/ci/: AGENTS.md  check_architecture_dependencies.py  check_no_legacy_terms.py  run_profile.py
scripts/fixtures/: hf-space-fetch-probe.html
src/souwen/: AGENTS.md  __init__.py  __main__.py  _parsing.py  citations.py  cli.py  config.py  doctor.py  editions.py  exceptions.py  feature_matrix.py  fingerprint.py  http_client.py  logging_config.py  models.py  plugin.py  plugin_manager.py  provenance.py  rate_limiter.py  retry.py  search.py  session_cache.py  source_registry.py  testing.py  wikisource.py
tests/: AGENTS.md  conftest.py  test_architecture_dependencies.py  test_article_extract_functional_check.py  test_binary_build_workflows.py  test_browser_pool.py  test_ci_profile_runner.py  test_citations.py  test_cli.py  test_common_runtime_concurrency.py  test_common_runtime_http_transport.py  test_common_runtime_oauth_transport.py  test_common_runtime_rate_limiter.py  test_common_runtime_redaction.py  test_common_runtime_ssrf.py  test_common_runtime_transport_errors.py  test_config.py  test_config_loader.py  test_crawl4ai_functional_check.py  test_datacite_functional_check.py  test_doab_functional_check.py  test_dockerfiles.py  test_docs_install_commands.py  test_doctor.py  test_editions.py  test_eric_functional_check.py  test_facade.py  test_fetch_handlers.py  test_figshare_functional_check.py  test_fingerprint.py  test_functional_common.py  test_gen_docs.py  test_gen_source_ids.py  test_hf_space_smoke.py  test_http_client.py  test_import_surface.py  test_infra.py  test_internet_archive_functional_check.py  test_librivox_functional_check.py  test_logging.py  (+28 more)
tests/contracts/: test_current_api_contract.py  test_current_python_dependency_graph_contract.py  test_current_security_behavior_contract.py  test_provider_directory_current_contract.py  test_target_canonical_contract.py
tests/registry/: AGENTS.md  __init__.py  test_catalog.py  test_consistency.py
tests/test_bilibili/: test_client.py  test_errors.py  test_models.py  test_wbi.py
tests/test_book/: test_doab.py  test_internet_archive.py  test_library_of_congress.py  test_librivox.py  test_oapen.py  test_open_library.py  test_wikisource.py
tests/test_feature_matrix/: test_edition_derivation.py  test_extras_consistency.py  test_probe_capabilities.py  test_surface_routes.py  test_warp_modes.py
tests/test_integrations/: test_mcp_http_server.py  test_mcp_server.py
tests/test_llm/: test_client.py  test_enriched_synthesis.py  test_fetch_summarize.py  test_prompts.py  test_providers.py  test_routes.py  test_summarize.py
tests/test_local_catalog/: __init__.py  test_functional_check.py  test_gutenberg.py  test_store.py  test_taiwan_new_books.py
tools/: AGENTS.md  check_markdown_links.py  gen_docs.py  gen_source_ids.py  gen_sourcetype.py  validate_plugin_manifest.py
(+812 files in other folders)
