[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "souwen"
version = "0.3.0"
description = "面向 AI Agent 的学术论文 + 专利 + 网页信息统一获取工具库"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [{name = "SouWen Contributors"}]
keywords = ["academic", "paper", "patent", "search", "arxiv", "openalex", "ai-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/SkywalkerSpace/SouWen"
Repository = "https://github.com/SkywalkerSpace/SouWen"
Documentation = "https://github.com/SkywalkerSpace/SouWen/tree/main/docs"
Issues = "https://github.com/SkywalkerSpace/SouWen/issues"
Changelog = "https://github.com/SkywalkerSpace/SouWen/blob/main/CHANGELOG.md"

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "tenacity>=8.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "lxml>=5.0",
    "beautifulsoup4>=4.12",
    "defusedxml>=0.7.0",
    "typer>=0.12",
    "pyyaml>=6.0",
    "aiosqlite>=0.20.0",
]

[project.scripts]
souwen = "souwen.cli:app"

[project.optional-dependencies]
scraper = ["playwright>=1.40", "curl-cffi>=0.14.0"]
server = ["fastapi>=0.111", "uvicorn[standard]>=0.29"]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-httpx>=0.30", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/souwen"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
