[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 项目配置：包名、版本、描述、许可证等基本信息
[project]
name = "souwen"
version = "0.7.0"
description = "面向 AI Agent 的学术论文 + 专利 + 网页信息统一获取工具库"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [{name = "BlueSkyXN"}]
keywords = ["academic", "paper", "patent", "search", "arxiv", "openalex", "ai-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Typing :: Typed",
]
# 核心依赖：HTTP 客户端、数据验证、重试机制、环境变量、CLI、配置解析等
dependencies = [
    "httpx[socks]>=0.27.0",
    "pydantic>=2.0",
    "tenacity>=8.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "lxml>=5.0",
    "beautifulsoup4>=4.12",
    "defusedxml>=0.7.0",
    "typer>=0.12",
    "pyyaml>=6.0",
    "aiosqlite>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/BlueSkyXN/SouWen"
Repository = "https://github.com/BlueSkyXN/SouWen"
Documentation = "https://github.com/BlueSkyXN/SouWen/tree/main/docs"
Issues = "https://github.com/BlueSkyXN/SouWen/issues"
Changelog = "https://github.com/BlueSkyXN/SouWen/blob/main/CHANGELOG.md"

[project.scripts]
souwen = "souwen.cli:app"

# 可选依赖组：根据用途安装不同的依赖集合
[project.optional-dependencies]
# TLS 指纹伪装（规避反爬虫检测）
tls = ["curl-cffi>=0.14.0"]
# 网页内容抓取（trafilatura 提取 + Markdown 转换）
web = ["trafilatura>=1.0"]
# 浏览器爬虫（Playwright）+ TLS 伪装
scraper = ["playwright>=1.40", "curl-cffi>=0.14.0"]
# Web 服务器（FastAPI + Uvicorn）
server = ["fastapi>=0.111", "uvicorn[standard]>=0.29"]
# MCP 服务器协议支持
mcp = ["mcp>=1.0"]
# 开发工具：单元测试、覆盖率、代码检查
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-httpx>=0.30", "pytest-cov>=4", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/souwen"]

# 代码风格和质量检查配置（使用 Ruff）
[tool.ruff]
line-length = 100
target-version = "py310"

# Pytest 测试配置
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
